Add openpyxl, fix static settings, update CSS and layout

--- a/Event/templates/Event/layout.html
+++ b/Event/templates/Event/layout.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark px-3">
-        <a class="navbar-brand" href="#">EVENT ATTENDANCE</a>
+        <span class="navbar-brand">EVENT ATTENDANCE</span>
         <div class="d-flex align-items-center flex-wrap">
 
             {% if user.is_authenticated %}
