--- a/Event/templates/Event/layout.html
+++ b/Event/templates/Event/layout.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+    
     <!-- Your Custom CSS -->
     <link rel="stylesheet" href="{% static 'Event/styles.css' %}">
 </head>
