--- a/Event/templates/Event/scan.html
+++ b/Event/templates/Event/scan.html
@@ -39,7 +39,7 @@
     <p id="result"></p>
 </div>
 
-
+<script>
 document.addEventListener("DOMContentLoaded", () => {
 
     const qrCodeRegionId = "preview";
