--- a/Event/templates/Event/layout.html
+++ b/Event/templates/Event/layout.html
@@ -40,7 +40,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Html5 QR Code library loaded once here -->
-    <script src="https://unpkg.com/html5-qrcode@2.3.7/minified/html5-qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html5-qrcode@2.3.7/minified/html5-qrcode.min.js" defer></script>
 
     {% block extra_scripts %}{% endblock %}
 </body>
