--- a/Event/templates/Event/scan.html
+++ b/Event/templates/Event/scan.html
@@ -41,6 +41,7 @@
 {% endblock %}
 
 {% block extra_scripts %}
+<script src="https://cdn.jsdelivr.net/npm/html5-qrcode@2.3.7/minified/html5-qrcode.min.js" defer></script>
 <script>
 document.addEventListener("DOMContentLoaded", () => {
     const qrCodeRegionId = "preview";
