--- a/Event/templates/Event/SignUp.html
+++ b/Event/templates/Event/SignUp.html
@@ -1,4 +1,5 @@
 {% extends "Event/layout.html" %}
+{% load static %}
 {% block title %}Sign Up{% endblock %}
 {% block content %}
 <div class="d-flex justify-content-center mt-5">
