--- a/Event/templates/Event/registered.html
+++ b/Event/templates/Event/registered.html
@@ -1,5 +1,5 @@
 {% extends "Event/layout.html" %}
-
+{% load static %}
 {% block title %}Registration Successful{% endblock %}
 
 {% block content %}
