--- a/Event/templates/Event/layout.html
+++ b/Event/templates/Event/layout.html
@@ -6,10 +6,13 @@
     <meta charset="UTF-8">
     <title>{% block title %}Event System{% endblock %}</title>
 
+    <!-- Favicon -->
+    <link rel="icon" href="{% static 'Event/favicon.ico' %}" type="image/x-icon">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Your Custom CSS -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'Event/styles.css' %}">
 </head>
 
@@ -36,10 +39,10 @@
         <p class="mb-0">&copy; 2025 Event System</p>
     </footer>
 
-    <!-- Bootstrap JS Bundle -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Html5 QR Code library loaded once here -->
+    <!-- Html5 QR Code -->
     <script src="{% static 'Event/js/html5-qrcode.min.js' %}" defer></script>
 
     {% block extra_scripts %}{% endblock %}
