--- a/Event/templates/Event/qr.html
+++ b/Event/templates/Event/qr.html
@@ -3,6 +3,7 @@
 {% block title %}Your QR Code{% endblock %}
 
 {% block content %}
+print("Saving QR:", participant.qr_code_image.path)
 <div class="card-custom text-center">
     <h2>Your Event QR Code</h2>
     <p>Please save this QR code. You’ll need it to mark your attendance.</p>
