--- a/Event/templates/Event/dashboard.html
+++ b/Event/templates/Event/dashboard.html
@@ -3,6 +3,14 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
+<style>
+    .card-custom {
+    display: flex !important;
+    flex-direction: column!important;
+    align-items: center !important; /* horizontal center for all children */
+    text-align: center !important;  /* center text inside children */
+}
+</style>
 <div class="card-custom">
     <h2 class="mb-3" style="margin-top: 130px;">Admin Dashboard</h2>
 
